@@ -233,7 +233,7 @@ module Nokogiri
       undef_method :namespace_definitions, :line, :add_namespace
 
       def add_child node_or_tags
-        raise "Document already has a root node" if root
+        raise "Document already has a root node" if root && root.name != 'nokogiri_text_wrapper'
         node_or_tags = coerce(node_or_tags)
         if node_or_tags.is_a?(XML::NodeSet)
           raise "Document cannot have multiple root nodes" if node_or_tags.size > 1
